# TextSim

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  tool.hpp
include/bitcodec/: bitalignedcommon.hpp  block.hpp  eliasdelta.hpp  eliasgamma.hpp  eliasomega.hpp  golombrice.hpp
include/bytecodec/: bytealignedcommon.hpp  variantbyte.hpp  variantg8cu.hpp  variantg8iu.hpp  variantgb.hpp
include/gcindexer/fourgram/: invertedgcfour.hpp  naivegcfour.hpp
include/gcindexer/trigram/: invertedgctri.hpp  naivegctri.hpp
include/gfindexer/: alignedgfindexer.hpp  compactgfindexer.hpp  naivegfindexer.hpp
include/giindexer/: combinerangeindexer.hpp  naivegiindexer.hpp
include/interfaces/: gcindexer.hpp  gfindexer.hpp  giindexer.hpp  intermediate_x32.hpp  intermediate_x64.hpp  intermediate_x8.hpp  intersection.hpp  phrasesim.hpp  stopwords.hpp
include/intersection/: galloping.hpp  linear.hpp  simdgalloping.hpp
include/phrasesim/: rakibsim.hpp
include/stopwords/: unorderedstopwords.hpp
include/util/: bit_vector.hpp  eliasfanovec.hpp  wordwriter.hpp
include/wordcodec/: simple16.hpp  simple8b.hpp  simple9.hpp
lib/cmph-2.0/: Makefile  config.status  cxxmph.pc  libtool
lib/cmph-2.0/cxxmph/: Makefile
lib/cmph-2.0/examples/: Makefile  file_adapter_ex2  struct_vector_adapter_ex3  vector_adapter_ex1
lib/cmph-2.0/examples/.deps/: file_adapter_ex2.Po  struct_vector_adapter_ex3.Po  vector_adapter_ex1.Po
lib/cmph-2.0/lib/: libcmph.so.0.0.0
lib/cmph-2.0/man/: Makefile
lib/cmph-2.0/src/: Makefile  bm_numbers  cmph  libcmph.la
lib/cmph-2.0/tests/: Makefile  mphf_tests  packed_mphf_tests
src/: main.cpp
test/: libtest.hpp  process.hpp
(+36 files in other folders)
